<resources>
    <string name="editar">Editar</string>
    <string name="app_name">Equipo5_proyectoFinal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrar">Registrarse</string>
    <string name="nombre_re">Nombre:</string>
    <string name="correo_is">Correo:</string>
    <string name="contrasena_is">Contraseña:</string>
    <string name="rcontrasena_re">Repetir contraseña:</string>
    <string name="button_is">Iniciar sesion</string>
    <string name="button_registrar">Registrarse</string>
    <string name="button_olcontra"><u>Olvide la contraseña</u></string>
    <string name="listatitulo">Lista de tareas</string>
    <string name="proxasign">Proximas</string>
    <string name="compleasign">Completadas</string>
    <string name="title_activity_agregar">AgregarActivity</string>
    <string name="agregar">Agregar</string>
    <string name="asignatura">Asignatura:</string>
    <string name="tipo">Tipo:</string>
    <string name="fecha">Fecha:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="prioridad">Prioridad:</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_actualizar">Actualizar</string>
    <string name="button_completada">Marcar como completada</string>
    <string name="eliminar"><u>Eliminar</u></string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_nuevo_ciclo">NuevoCicloActivity</string>
    <string name="title_activity_olvidar_contra">OlvidarContraActivity</string>
    <string name="title_activity_editar">EditarActivity</string>
    <string name="titulo_estadistica">Estadisticas</string>
    <string name="fecha_inicio">Fecha Inicio:</string>
    <string name="fecha_fin">Fecha Fin:</string>
    <string name="asignacion">Asignacion:</string>
    <string name="rendimiento">Rendimiento Academico</string>
</resources>