<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_header"
        android:text="@string/titulo_estadistica"
        android:fontFamily="sans-serif-thin"
        android:textSize="40dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fecha_inicio"
            android:paddingHorizontal="20dp"
            android:layout_marginStart="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fecha_fin"
            android:paddingHorizontal="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="85dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingHorizontal="20dp"
            android:inputType="date"
            android:id="@+id/fechaInicio"
            android:background="@color/gray"
            android:textColor="@color/white"
            />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:paddingHorizontal="20dp"
            android:inputType="date"
            android:id="@+id/fechFin"
            android:background="@color/gray"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asignacion"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        />

    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rendimiento"
        android:layout_marginStart="58dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/graficalineal"/>

</LinearLayout>