<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_header"
        android:text="@string/agregar"
        android:fontFamily="sans-serif-thin"
        android:textSize="50dp"
        android:textAlignment="center"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        >
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/nombre_re"
                android:textSize="20dp"/>
            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/asignatura"
                android:textSize="20dp"/>
            <Spinner
                android:id="@+id/asignaturas"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/tipo"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/tipo_asignatura"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/fecha"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/rcontrasena_re"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/rcontrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/descripcion"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                />
            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:inputType="textMultiLine"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/prioridad"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="Baja"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selectable"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="3dp"/>
                <RadioButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="Media"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selectable"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="3dp"/>
                <RadioButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="Alta"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selectable"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="3dp"/>
            </RadioGroup>

            <Button
                android:id="@+id/registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/agregar"
                android:textColor="@color/white"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                />
        </LinearLayout>

    </ScrollView>





</LinearLayout>